--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,8 +1,7 @@
 .page {
-  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  font-family: 'Inter', Arial, sans-serif;
   margin: 0 auto;
   max-width: 1280px;
-  background-color: #2a2c2f;
   text-rendering: optimizeLegibility;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
