--- a/blocks/places/__list/places_list.css
+++ b/blocks/places/__list/places_list.css
@@ -1,5 +1,19 @@
 .places__list {
+  display: flex;
+  flex-direction: column;
   list-style-type: none;
   margin: 0;
   padding: 0;
+  gap: 80px;
+}
+
+@media screen and (max-width: 768px) {
+  .places__list {
+    gap: 72px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .places__list {
+    gap: 50px;
+  }
 }
